Table styling tweaks, removed left border on the first thead th child to avoid double border, tweaked vertical positioning of checkboxes.

--- a/code/administrator/template/default/css/default.css
+++ b/code/administrator/template/default/css/default.css
@@ -3469,6 +3469,10 @@ fieldset {
   border-collapse: collapse;
   color: #666;
 }
+.-koowa-grid table input[type="radio"],
+.-koowa-grid table input[type="checkbox"] {
+  margin-top: 0;
+}
 .-koowa-grid table td {
   padding: 4px 4px;
 }
@@ -3494,6 +3498,10 @@ fieldset {
 }
 .-koowa-grid table thead th a:hover {
   text-decoration: none;
+}
+.-koowa-grid table thead th:first-child {
+  border-left: none;
+  padding-left: 2px;
 }
 .-koowa-grid table thead th:not(.void):active {
   background-color: #e2e2e2;
